Much better output and code

--- a/lib/metacl/templates/me_wrapper.c.erb
+++ b/lib/metacl/templates/me_wrapper.c.erb
@@ -1,5 +1,7 @@
-for (int <%= n_index %>=0; <%= n_index %> < <%= n %>; <%= n_index %>++) {
-    for (int <%= m_index %>=0; <%= m_index %> < <%= m %>; <%= m_index %>++) {
+for (int <%= n_index %>=0; <%= n_index %> < <%= n %>; <%= n_index %>++)
+{
+    for (int <%= m_index %>=0; <%= m_index %> < <%= m %>; <%= m_index %>++)
+    {
 <%= code %>
     }
 }
