Preparation for inner cycles for multiplying

--- a/lib/metacl/templates/me_wrapper.c.erb
+++ b/lib/metacl/templates/me_wrapper.c.erb
@@ -1,6 +1,6 @@
-for (int <%= n_index %>=0; <%= n_index %> < <%= n %>; <%= n_index %>++)
+for (int <%= n_iterator %>=0; <%= n_iterator %> < <%= n %>; <%= n_iterator %>++)
 {
-    for (int <%= m_index %>=0; <%= m_index %> < <%= m %>; <%= m_index %>++)
+    for (int <%= m_iterator %>=0; <%= m_iterator %> < <%= m %>; <%= m_iterator %>++)
     {
 <%= code %>
     }
