--- a/lib/metacl/templates/me_wrapper.c.erb
+++ b/lib/metacl/templates/me_wrapper.c.erb
@@ -1,6 +1,6 @@
-for (int <%= n_iterator %>=0; <%= n_iterator %> < <%= n %>; <%= n_iterator %>++)
+for (int <%= n_iterator %>=<%= from[0] %>; <%= n_iterator %> < <%= to[0] %>; <%= n_iterator %>++)
 {
-    for (int <%= m_iterator %>=0; <%= m_iterator %> < <%= m %>; <%= m_iterator %>++)
+    for (int <%= m_iterator %>=<%= from[1] %>; <%= m_iterator %> < <%= to[1] %>; <%= m_iterator %>++)
     {
 <%= code %>
     }
