--- a/lib/metacl/templates/print_matrix.c.erb
+++ b/lib/metacl/templates/print_matrix.c.erb
@@ -1,8 +1,8 @@
-for (int i = 0; i < <%= m %>; i++)
+for (int i = 0; i < <%= n %>; i++)
 {
-    for (int j = 0; j < <%= n %>; j++)
+    for (int j = 0; j < <%= m %>; j++)
     {
-        printf("%f ", <%= name %>[j + <%= n %>*i]);
+        printf("%f ", <%= name %>[j + <%= m %>*i]);
     }
     printf("\n");
 }
