--- a/lib/metacl/templates/create_matrix.c.erb
+++ b/lib/metacl/templates/create_matrix.c.erb
@@ -1,5 +1,5 @@
-<%= type %> *<%= name %> = malloc(<%= n*m %> * sizeof(<%= type %>)); // N = <%= n %>, M = <%= m %>
-<% if fill_with %>for (int i = 0; i < <%= n*m %>; i++) {
+<%= type %> *<%= name %> = malloc(<%= n %>*<%= m %> * sizeof(<%= type %>)); // N = <%= n %>, M = <%= m %>
+<% if fill_with %>for (int i = 0; i < <%= n %>*<%= m %>; i++) {
     <%= name %>[i] = <%= fill_with %>;
 }
 <% end %>
